--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.12",
+    "framer-motion": "^12.33.0",
     "gsap": "^3.13.0",
     "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-parallax-tilt": "^1.7.307",
+    "react-parallax-tilt": "^1.7.319",
     "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5",
     "react-type-animation": "^3.2.0",
+    "styled-components": "^6.3.8",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.12"
   },
